--- a/Web/app/templates/results.html
+++ b/Web/app/templates/results.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             {% if results is iterable and results|length > 0 %}
-                <form action="{{url_for("sql_to_vcf")}}" method="get" name="record">
+                <form action="{{url_for("sql_to_vcf.show")}}" method="get" name="record">
                     <div class="controls">
                         <button type="submit" value="{{ query }}" id="download" name="submit" class="btn btn-primary sharp" >Download</button>
                     </div>
