--- a/Web/app/templates/processing.html
+++ b/Web/app/templates/processing.html
@@ -36,7 +36,7 @@
                     <button type="submit" value="{{ query }}" id="download" name="submit" class="btn btn-primary sharp">Download</button>
                 </div>
             </form>
-            <form action="{{url_for("process.show")}}" method="get" name="record">
+            <form action="{{url_for("processing.show")}}" method="get" name="record">
                 <div class="controls">
                     <button type="submit" value="{{ query }}" id="process" name="submit" class="btn btn-primary sharp">Process</button>
                 </div>
