Commented out processing functions and implemented quick fix (auto-increment primary key in temp tables) for duplicate primary key issue

--- a/web/app/templates/results.html
+++ b/web/app/templates/results.html
@@ -36,11 +36,11 @@
                     <button type="submit" value="{{ query }}" id="download" name="submit" class="btn btn-primary sharp">Download</button>
                 </div>
             </form>
-            <form action="{{url_for("processing.show")}}" method="get" name="record">
+            <!--<form action="{{url_for("processing.show")}}" method="get" name="record">
                 <div class="controls">
                     <button type="submit" value="{{ query }}" id="process" name="submit" class="btn btn-primary sharp">Process</button>
                 </div>
-            </form>
+            </form>-->
         {% endif %}
     </div>
     <script src="//ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
